--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation project('1_16_R1')
     implementation project('1_16_R2')
     implementation project('1_16_R3')
+    implementation project('1_17_R1')
+    implementation project('1_18_R1')
 }
 
 shadowJar {
