--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,12 @@ dependencies {
     implementation project('1_18_R1')
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
 shadowJar {
     classifier = ''
     configurations = [project.configurations.compileClasspath]
